--- a/Notes/flex.css
+++ b/Notes/flex.css
@@ -1,3 +1,25 @@
-h2{
+body{
+    font-family: sans-serif;
+}
+h1{
     text-align: center;
+}
+.container{
+    background-color: #0e4e53;
+    width: 90%;
+    height: 200px;
+    margin: 0 auto;
+    border: 5px solid #0e4e53;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    flex-wrap:nowrap;
+    align-items: baseline;
+}
+
+.container div{
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    font-size: 2em;
 }
