--- a/Notes/flex.css
+++ b/Notes/flex.css
@@ -7,19 +7,18 @@ h1{
 .container{
     background-color: #0e4e53;
     width: 90%;
-    height: 200px;
+    /* height: 200px; */
     margin: 0 auto;
     border: 5px solid #0e4e53;
     display: flex;
     flex-direction: row;
     justify-content:center;
-    flex-wrap:nowrap;
-    align-items: baseline;
+    flex-wrap:wrap;
 }
 
 .container div{
     width: 100px;
     height: 100px;
     text-align: center;
-    font-size: 2em;
+    flex-basis: 100px;
 }
